[project]
name = "lang-graph-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "unstructured>=0.17.0",
]
